# TimS-ml-autoresearch-x-transformers

./: .gitignore  README.md  analysis.ipynb  program.md  pyproject.toml  train.py
docs/: adjustable_params.md
