[project]
name = "autoresearch"
version = "0.2.0"
description = "Autonomous LLM-driven research on character-level language modeling with x-transformers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
    "matplotlib",
    "pandas",
    "loguru",
    "einx",
    "ema-pytorch",
    "adam-atan2-pytorch",
]

[project.optional-dependencies]
fp8 = [
    "transformer_engine",
]
analysis = [
    "jupytext",
]
